<resources>
    <string name="app_name">OnlineShop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>/>
    <string name="already_have">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="show_password">show password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="wrong_login_or_password">Неверный логин или пароль</string>
    <string name="login_already_exist">Уже есть такой пользователь</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="satria_adhi">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="balance_number">$ 1593</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="trade_by_bata">Trade by bata</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
</resources>