<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginFragment">


    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="199dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="129dp"
        android:gravity="center_horizontal|top"
        android:text="@string/welcome_back"
        android:textAppearance="@style/login_sign_in_text"
        app:layout_constraintBottom_toTopOf="@id/first_name_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/montserrat" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/first_name_edit"
        style="@style/edit_text"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="72dp"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_back" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_edit"
        style="@style/edit_text"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="35dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_edit"
        android:inputType="textPassword"/>

    <ImageButton
        android:id="@+id/show_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_visibility_off"
        app:layout_constraintEnd_toEndOf="@id/password_edit"
        app:layout_constraintTop_toTopOf="@id/password_edit"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/show_password" />

    <Button
        android:id="@+id/login_button"
        style="@style/button"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_marginTop="99dp"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>