<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.pageone.PageOneFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_menu"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/trade_by_bata"
        app:titleMarginStart="72dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:gravity="end"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_avatar"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@drawable/ic_placeholder"
                app:civ_border_color="@color/black"
                app:civ_border_width="0.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_location"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:entries="@array/locations"
                app:layout_constraintEnd_toEndOf="@id/user_avatar"
                app:layout_constraintStart_toStartOf="@id/user_avatar"
                app:layout_constraintTop_toBottomOf="@id/user_avatar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search_edit"
        style="@style/edit_text"
        android:layout_width="262dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="9dp"
        android:hint="@string/what_are_you_looking_for"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@id/search_edit"
        app:layout_constraintEnd_toEndOf="@id/search_edit"
        app:layout_constraintTop_toTopOf="@id/search_edit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_edit" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/latest_container"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_recycler">

        <TextView
            android:id="@+id/latest_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/latest"
            android:layout_marginStart="11dp"
            style="@style/list_title"/>

        <TextView
            android:id="@+id/latest_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/view_all"
            android:layout_marginEnd="11dp"
            style="@style/list_view_all"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/latest_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>